fix(TheSidebar): add missed z-index

--- a/src/widgets/TheSidebar/ui/TheSidebar.variables.scss
+++ b/src/widgets/TheSidebar/ui/TheSidebar.variables.scss
@@ -1,4 +1,5 @@
 :root {
 	--sidebar-width: 76px;
 	--sidebar-width-expanded: 300px;
+	--sidebar-z-index: 1;
 }
